[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eqtempclust"
version = "1.0.1"
description = "Temporal clustering analysis via occupation probability"
authors = [
    { name = "Eric Beauce" }
]
license = { text = "GPL" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]

classifiers = [
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/ebeauce/eqtempclust"

[tool.setuptools]
include-package-data = true
zip-safe = false
py-modules = ["eqtempclust"]

